# cachyos-monitor

./: .gitignore  CMakeLists.txt  readme.md
include/providers/: IMetricProvider.hpp  psiProvider.hpp  ramProvider.hpp  schedulerProvider.hpp  zramProviders.hpp
src/: main.cpp
src/providers/: psiProvider.cpp  ramProvider.cpp  schedulerProvider.cpp  zramProvider.cpp
